Fix dark mode "Restart lesson" on <90% accuracy

--- a/src/index.scss
+++ b/src/index.scss
@@ -393,6 +393,9 @@ a {
     &:visited {
       color: var(--violet-600);
     }
+    &.bg-warning:visited {
+      color: var(--violet-800);
+    }
   }
 }
 
